<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.MainActivity"
    >

    <item android:id="@+id/miCopy"
          android:title="@string/label_miCopy"
          android:icon="@drawable/ic_content_copy_black_24dp"
          android:orderInCategory="1"
          app:showAsAction="ifRoom"
          />

    <item android:id="@+id/miTweet"
          android:title="@string/label_miTweet"
          android:icon="@drawable/ic_tweet_black"
          android:orderInCategory="2"
          app:showAsAction="ifRoom"
          />

    <item android:id="@+id/miShare"
          android:title="@string/label_miShare"
          android:icon="@drawable/ic_share_black_24dp"
          android:orderInCategory="3"
          app:showAsAction="ifRoom"
          />

    <item android:id="@+id/miHistory"
          android:title="@string/label_miHistory"
          android:icon="@drawable/ic_history_black_24dp"
          android:orderInCategory="99"
          app:showAsAction="ifRoom"
        />

</menu>